[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-parsers"
description = "SD Parsers - read metadata from images created by Stable Diffusion"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
   'Pillow>=8.3.1',
]
dynamic = ["version"]
license = {file = "LICENSE.txt"}

[tool.setuptools_scm]
[tool.setuptools]
include-package-data = true

[project.urls]
repository = "https://github.com/d3x-at/sd-parsers"